--- a/OOPTheSecond/OOPTheSecond.csproj
+++ b/OOPTheSecond/OOPTheSecond.csproj
@@ -44,6 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Car.cs" />
+    <Compile Include="HopDongChoThue.cs" />
+    <Compile Include="KhachHang.cs" />
+    <Compile Include="Nguoi.cs" />
+    <Compile Include="NhanVien.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanLyXe.cs" />
